--- a/electoral_roll/requirements.txt
+++ b/electoral_roll/requirements.txt
@@ -1,3 +1,9 @@
 Django==4.2
 psycopg2-binary==2.9.8  # For PostgreSQL
-gunicorn==20.1.0        # For running the app in production
+gunicorn==20.1.0 
+openpyxl
+phonenumbers
+twilio
+import-export
+datetime
+       
